fix: color of bell icon in dark mode

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -81,7 +81,7 @@ body.dark{
 }
 
 .user-details .name{
-    font-size: 14px;
+    font-size: 1rem;
     font-weight: 600;
     color: var(--text-color);
 }
@@ -436,7 +436,6 @@ main > .title > .greeting > .bell-container .notification {
 }
 
 main > .title > .greeting > .bell-container:hover .notification {
-    color: var(--primary-color); /* Change bell color on hover */
     transform: scale(1.3); /* Pop out effect */
     animation: vibrate 0.3s ease-in-out infinite; /* Vibrate effect */
 }
